latest index.html
9/12/2024

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <button class="num-btn" onclick="appendToDisplay('0')">0</button>
             <!-- <button class="num-btn" onclick="appendToDisplay('.')">.</button> -->
             <button data-base="8" onclick="setMode(8)" class="mode-btn">OCT</button> 
-            <!-- <button id="dec-btn" onclick="showButtonsForBase(2)">Deco</button> -->
-            <button onclick="showButtonsForBase(16)" class="mode-btn">HEX</button> 
+            <!-- <button id="dec-btn" onclick="NewCo(2)">Deco</button> -->
+            <button onclick="setMode(16)" data-base="16"  class="mode-btn">HEX</button> 
             <!-- <button onclick="resetButtons()" class="operator-btn"><i class="fa fa-refresh fa-spin"></i></button> -->
             <button onclick="resetModes()" class="operator-btn"><i class="fa fa-refresh"></i></button>
         </div>
